--- a/events.html
+++ b/events.html
@@ -11,19 +11,19 @@
 <body>
 
     <!-- <h1>hello world!</h1> -->
-    <button class="butts">Click me!</button>
+    <button class="butts">Click mdde!</button>
 
     <h2>Buttons</h2>
-    <button class="buy">Buy Item 1</button>
-    <button class="buy">Buy Item 2</button>
-    <button class="buy">Buy Item 3</button>
-    <button class="buy">Buy Item 4</button>
-    <button class="buy">Buy Item 5</button>
-    <button class="buy">Buy Item 6</button>
-    <button class="buy">Buy Item 7</button>
-    <button class="buy">Buy Item 8</button>
+    <button data-price="100" class="buy">Buy Item 1</button>
+    <button data-price="200" class="buy">Buy Item 2</button>
+    <button data-price="300" class="buy">Buy Item 3</button>
+    <button data-price="400" class="buy">Buy Item 4</button>
+    <button data-price="500" class="buy">Buy Item 5</button>
+    <button data-price="600" class="buy">Buy Item 6</button>
+    <button data-price="700" class="buy">Buy Item 7</button>
+    <button data-price="800" class="buy">Buy Item 8</button>
 
-
+  <img class="photo" src="https://picsum.photos/200" alt="nice">
 
     <script src="./events.js"></script>
 
